--- a/student1.html
+++ b/student1.html
@@ -36,13 +36,17 @@
                         <div class="student1Box">
                             <h2>SARA</h2>
                             <ul>
+                                <li class="list">Date of Birth: March 14, 1998</li>
                                 <li class="list">Register No: 642F0428</li>
                                 <li class="list">Department: B.Sc.AI&ML</li>
                                 <li class="list">Grade: 82%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: sara8823@gmail.com</li>
                                 <li class="list">Mobile No: 8653984739</li>
                             </ul>
-                            <button type="button" onclick="window.location.href='index.html'">Go Back</button>
+                            <button class="Button" type="button" onclick="window.location.href='index.html'">Go Back</button>
                         </div>
                     </div>
                 </div>
