--- a/student6.html
+++ b/student6.html
@@ -36,9 +36,13 @@
                         <div class="student6Box">
                             <h2>MATHEW</h2>
                             <ul>
+                                <li class="list">Date of Birth: August 18, 1994</li>
                                 <li class="list">Register No: 642F0432</li>
                                 <li class="list">Department: B.Sc.CS</li>
                                 <li class="list">Grade: 91%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: mathew963@gmail.com</li>
                                 <li class="list">Mobile No: 9576309281</li>
                             </ul>
