--- a/student2.html
+++ b/student2.html
@@ -38,9 +38,13 @@
                         <div class="student2Box ">
                             <h2>DANIEL</h2>
                             <ul>
+                                <li class="list">Date of Birth: July 22, 1996</li>
                                 <li class="list">Register No: 642F0428</li>
                                 <li class="list">Department: CSE</li>
                                 <li class="list">Grade: 79%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: daniel@gmail.com</li>
                                 <li class="list">Mobile No: 9763585768</li>
                             </ul>
