--- a/student3.html
+++ b/student3.html
@@ -38,9 +38,13 @@
                         <div class="student3Box">
                             <h2>LORNA</h2>
                             <ul>
+                                <li class="list">Date of Birth: December 5, 1997</li>
                                 <li class="list">Register No: 642F0429</li>
                                 <li class="list">Department: B.Sc.IT</li>
                                 <li class="list">Grade: 94%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: lorna7412@gmail.com</li>
                                 <li class="list">Mobile No: 8653984739</li>
                             </ul>
