--- a/student4.html
+++ b/student4.html
@@ -38,9 +38,13 @@
                         <div class="student4Box">
                             <h2>JACKSON</h2>
                             <ul>
+                                <li class="list">Date of Birth: January 30, 1995</li>
                                 <li class="list">Register No: 642F0430</li>
                                 <li class="list">Department: EEE</li>
                                 <li class="list">Grade: 78%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: jackson1476@gmail.com</li>
                                 <li class="list">Mobile No: 7549092847</li>
                             </ul>
