--- a/student5.html
+++ b/student5.html
@@ -38,9 +38,13 @@
                         <div class="student5Box">
                             <h2>DIANA</h2>
                             <ul>
+                                <li class="list">Date of Birth: May 9, 1999
                                 <li class="list">Register No: 642F0431</li>
                                 <li class="list">Department: B.Com</li>
                                 <li class="list">Grade: 84%</li>
+                            </ul>
+                            <h3>Contact:</h3>
+                            <ul>
                                 <li class="list">Email: diana@gmail.com</li>
                                 <li class="list">Mobile No: 9856247872</li>
                             </ul>
