--- a/student3.html
+++ b/student3.html
@@ -7,7 +7,7 @@
     <!-- Project Title -->
     <title>STUDENT PROFILE & ACADEMIC RECORD</title>
     <!-- Favorite Icon -->
-    <link rel="stylesheet" href="./assets/images/education.png" type="image/x-icon">
+    <link rel="shortcut icon" href="./assets/images/education.png" type="image/x-icon">
     <!-- CSS Link -->
     <link rel="stylesheet" href="./details.css">
     <!-- Font Awesome CDN Link -->
